03_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: haproxy
  namespace: redis
  labels:
    app: haproxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: haproxy
      annotations:
        k8s.v1.cni.cncf.io/networks: redis-haproxy-multus-ipvlan
    spec:
      restartPolicy: Always
<<<<<<< HEAD

              # Enable TCP Fast Open
              sysctl -w net.ipv4.tcp_fastopen=1
=======
>>>>>>> parent of e8386c2 (Add: sysctl config for TCP Fast Open (net.ipv4.tcp_fastopen))
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            runAsNonRoot: false
            seccompProfile:
              type: Unconfined
      serviceAccountName: haproxy
      schedulerName: default-scheduler
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/worker
                    operator: Exists
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        runAsNonRoot: false
        fsGroup: 0
        seccompProfile:
          type: Unconfined
      containers:
        - resources:
            limits:
              cpu: '4'
              memory: 8Gi
            requests:
              cpu: '4'
              memory: 8Gi
          readinessProbe:
            tcpSocket:
              port: 1936
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: haproxy
          command:
            - sh
            - '-c'
            - |
              python3 /usr/local/bin/generate.py \
              --template /haproxy/haproxy-template.cfg \
              --output /haproxy/haproxy.cfg
              exec /usr/local/sbin/haproxy -f /haproxy/haproxy.cfg
          livenessProbe:
            tcpSocket:
              port: 1936
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: status
              containerPort: 1936
              protocol: TCP
            - name: master
              containerPort: 6379
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: haproxy-template
              mountPath: /haproxy/haproxy-template.cfg
              subPath: haproxy-template.cfg
          terminationMessagePolicy: File
          image: 'registry.ocp4.local:5000/haproxytech/haproxy-ubuntu-quic-custom:3.2'
      serviceAccount: haproxy
      volumes:
        - name: haproxy-template
          configMap:
            name: haproxy-template
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: haproxy
  namespace: redis
spec:
  externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ports:
    - name: status
      protocol: TCP
      port: 1936
      targetPort: 1936
      nodePort: 31936
    - name: master
      protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 30011
  internalTrafficPolicy: Cluster
  type: NodePort
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: haproxy
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: redis-haproxy
  namespace: redis
spec:
  host: redis-haproxy.apps.ocp4.local
  to:
    kind: Service
    name: haproxy
    weight: 100
  port:
    targetPort: status
  wildcardPolicy: None
